--- a/bookstore/style.css
+++ b/bookstore/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 .nav {
-  background-color: #e2f3f4;
+  background-color: #40999e;
   display: flex;
   flex-direction: row;
   justify-content: space-between; /* space between logo and links */
@@ -32,7 +32,7 @@ body{
 .logo span {
   font-size: 22px;
   font-weight: bold;
-  color: #4a7c8b;
+  color: #ebebeb;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -41,7 +41,7 @@ body{
   text-decoration: none;
   margin: 0 10px;
   font-size: 20px;
-  color: #6dc7d1;
+  color: #d4dcdd;
 }
 
 .links a:hover {
@@ -55,23 +55,38 @@ body{
     background-color: beige;
 }
 
+.main-content{
+   height: 100%;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+    background-color: #151e1f;
+    background-image: url("./pics/bgimgsearch.jpg");
+    background-size: cover;
+    height: 100%;
+}
+
+
 .search{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 100%;
-    background-color: #6dc7d1;
+    background-color: rgba(45, 119, 122, 0.6);
+    border: solid black 1px;
+    border-radius: 4px;
+    max-width: fit-content;
+    padding: 32px;
 }
 
 .search h1{
     font-size: 3em;
     margin-bottom: 30px;
-    color: #e2f3f4;
+    color: #f2f3f3;
 }
 
 .search input{
-    width: 25%;
+    width: 50em;
     box-sizing: border-box;
     border: 2px solid black;
     padding : 12px 0px 12px 6px;
